--- a/index.html
+++ b/index.html
@@ -5,33 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heavy Auto Health - Mobile CARB Compliance Testing</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-    <nav class="navbar">
-        <img src="images/logo.png" alt="Heavy Auto Health Logo" class="logo">
-        <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+    <nav>
+        <div class="logo">Heavy Auto Health</div>
+        <div class="nav-items">
+            <a href="#home">Home</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
+        </div>
     </nav>
-
+    
     <section id="home" class="hero">
-        <div class="hero-content">
-            <h1>Mobile CARB Compliance Testing</h1>
-            <p>Professional on-site testing services for your fleet</p>
-            <a href="#contact" class="cta-button">Schedule Now</a>
+        <h1>Mobile CARB Compliance Testing</h1>
+        <p>Professional on-site testing services for your fleet</p>
+        <a href="tel:415-439-9369" class="cta-button">Call Now: (415) 439-9369</a>
+    </section>
+
+    <section id="services">
+        <h2>Our Services</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <h3>Mobile Testing</h3>
+                <p>We come to your location</p>
+            </div>
+            <div class="service-card">
+                <h3>CARB Compliance</h3>
+                <p>Official certification</p>
+            </div>
+            <div class="service-card">
+                <h3>Fast Service</h3>
+                <p>Minimize downtime</p>
+            </div>
         </div>
     </section>
 
-    <!-- Add more sections as needed -->
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <div class="contact-info">
+            <p>Phone: <a href="tel:415-439-9369">(415) 439-9369</a></p>
+            <p>Email: <a href="mailto:contact@heavyautohealth.com">contact@heavyautohealth.com</a></p>
+        </div>
+    </section>
 
     <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Heavy Auto Health. All rights reserved.</p>
-        </div>
+        <p>&copy; 2024 Heavy Auto Health. All rights reserved.</p>
     </footer>
-
-    <script src="js/main.js"></script>
 </body>
 </html>
