--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,38 +7,38 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header style="background-color: #165873; color: #F2F2F2; padding: 20px; text-align: center;">
-        <img src="assets/images/heavyautophealthnameandlogo.jpg" alt="Heavy Auto Health Logo" style="max-width: 200px;">
+    <header>
+        <img src="assets/images/heavyautophealthnameandlogo.jpg" alt="Heavy Auto Health Logo" class="logo">
         <h1>Welcome to Heavy Auto Health</h1>
         <p>Your trusted partner for Clean Truck Check services</p>
     </header>
 
-    <nav style="background-color: #3BBCD9; padding: 10px; text-align: center;">
-        <a href="services/index.html" style="color: #F2F2F2; margin: 0 15px; text-decoration: none;">Services</a>
-        <a href="pricing/index.html" style="color: #F2F2F2; margin: 0 15px; text-decoration: none;">Pricing</a>
-        <a href="faq/index.html" style="color: #F2F2F2; margin: 0 15px; text-decoration: none;">FAQ</a>
-        <a href="blog/index.html" style="color: #F2F2F2; margin: 0 15px; text-decoration: none;">Blog</a>
-        <a href="contact/index.html" style="color: #F2F2F2; margin: 0 15px; text-decoration: none;">Contact</a>
+    <nav>
+        <a href="services/">Services</a>
+        <a href="pricing/">Pricing</a>
+        <a href="faq/">FAQ</a>
+        <a href="blog/">Blog</a>
+        <a href="contact/">Contact</a>
     </nav>
 
-    <main style="padding: 20px;">
-        <section style="margin-bottom: 20px;">
-            <h2 style="color: #47A644;">About Us</h2>
+    <main>
+        <section class="about">
+            <h2>About Us</h2>
             <p>Heavy Auto Health is dedicated to providing mobile Clean Truck Check services, including OBD and smoke opacity tests, to ensure compliance with California's emissions regulations.</p>
         </section>
 
-        <section style="margin-bottom: 20px;">
-            <h2 style="color: #F2AC29;">Our Services</h2>
-            <p>We offer competitive pricing, mobile testing, and discounts for bulk and repeat tests. Learn more on our <a href="services/index.html" style="color: #165873;">Services</a> page.</p>
+        <section class="services-preview">
+            <h2>Our Services</h2>
+            <p>We offer competitive pricing, mobile testing, and discounts for bulk and repeat tests. Learn more on our <a href="services/">Services</a> page.</p>
         </section>
 
-        <section>
-            <h2 style="color: #47A644;">Contact Us</h2>
-            <p>Have questions? Visit our <a href="contact/index.html" style="color: #165873;">Contact</a> page to get in touch.</p>
+        <section class="contact-preview">
+            <h2>Contact Us</h2>
+            <p>Have questions? Visit our <a href="contact/">Contact</a> page to get in touch.</p>
         </section>
     </main>
 
-    <footer style="background-color: #165873; color: #F2F2F2; text-align: center; padding: 10px;">
+    <footer>
         <p>&copy; 2025 Heavy Auto Health. All rights reserved.</p>
     </footer>
 </body>
